--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,6 +33,6 @@ options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 
 substitutions:
-  _SERVICE_NAME: cloud-run-app
+  _SERVICE_NAME: cloud-run-ml-sales-prediction-app
 
 
