--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -5,14 +5,14 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy requirements and install
-COPY requirements.txt .
+COPY ./task2/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy app code
-COPY main.py .
+COPY ./task2/main.py .
 
 # Copy model.pkl file
-copy model.pkl .
+copy ./task2/model.pkl .
 
 # Expose port 8080
 EXPOSE 8080
