--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -4,15 +4,10 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install
-COPY ./task2/requirements.txt .
+# Copy all required files
+copy task2/ .
+
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy app code
-COPY ./task2/main.py .
-
-# Copy model.pkl file
-copy ./task2/model.pkl .
 
 # Expose port 8080
 EXPOSE 8080
