--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -4,14 +4,18 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Copy all required files
-copy task2/ .
-
+# Copy requirements and install
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy app code
+COPY main.py .
+
+# Copy model.pkl file
+copy model.pkl .
 
 # Expose port 8080
 EXPOSE 8080
 
 # Run app using gunicorn
 CMD ["python", "main.py"]
-
