--- a/task2/cloudbuild.yaml
+++ b/task2/cloudbuild.yaml
@@ -1,3 +1,6 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 substitutions:
   _REGION: "us-central1"          # example default region
   _RELEASE_TIMESTAMP: "${_TIMESTAMP}"
